# VVVVVV-in-Minecraft

./: .gitignore  README.md  beet.json  pyproject.toml
assets/assets/vvvvvv/models/base/: 10x10.json
src/data/vvvvvv/functions/: load.mcfunction  player_effects.mcfunction  setup_world.mcfunction  tick.mcfunction
src/data/vvvvvv/functions/map/: init.mcfunction  room_coords_to_id.mcfunction
vvvvvv/: init.py  map.py
vvvvvv/map/: generate.py  generator.py  image.py  map.py  map_data.py  parser.py  room_parser.py  tiles.py
vvvvvv/utils/: file.py
