[tool.poetry]
name = "vvvvvv-in-minecraft"
version = "0.1.0"
description = "A 1:1 recreation of VVVVVV in Minecraft: Java Edition"
authors = ["Bentroen <bemcdc@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
beet = "^0.41.6"
Pillow = "^8.3.2"
nbtlib = "^1.12.1"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
